@@ -85,8 +85,8 @@ class BibDatabaseDiffTest {
         // two different entries between the databases
         assertEquals(2, diff.getEntryDifferences().size(), "incorrect amount of different entries");
 
-        assertEquals(entryOne, diff.getEntryDifferences().get(0).getOriginalEntry(), "there is another value as originalEntry");
-        assertNull(diff.getEntryDifferences().get(0).getNewEntry(), "newEntry is not null");
+        assertEquals(entryOne, diff.getEntryDifferences().getFirst().getOriginalEntry(), "there is another value as originalEntry");
+        assertNull(diff.getEntryDifferences().getFirst().getNewEntry(), "newEntry is not null");
         assertEquals(entryTwo, diff.getEntryDifferences().get(1).getNewEntry(), "there is another value as newEntry");
         assertNull(diff.getEntryDifferences().get(1).getOriginalEntry(), "originalEntry is not null");
     }
@@ -104,8 +104,8 @@ class BibDatabaseDiffTest {
         // three different entries between the databases
         assertEquals(3, diff.getEntryDifferences().size(), "incorrect amount of different entries");
 
-        assertEquals(entryOne, diff.getEntryDifferences().get(0).getOriginalEntry(), "there is another value as originalEntry");
-        assertNull(diff.getEntryDifferences().get(0).getNewEntry(), "newEntry is not null");
+        assertEquals(entryOne, diff.getEntryDifferences().getFirst().getOriginalEntry(), "there is another value as originalEntry");
+        assertNull(diff.getEntryDifferences().getFirst().getNewEntry(), "newEntry is not null");
         assertEquals(entryTwo, diff.getEntryDifferences().get(1).getNewEntry(), "there is another value as newEntry");
         assertNull(diff.getEntryDifferences().get(1).getOriginalEntry(), "originalEntry is not null");
         assertEquals(entryThree, diff.getEntryDifferences().get(2).getNewEntry(), "there is another value as newEntry [2]");
@@ -130,8 +130,8 @@ class BibDatabaseDiffTest {
         // two different entries between the databases
         assertEquals(1, diff.getEntryDifferences().size(), "incorrect amount of different entries");
 
-        assertEquals(entryOne, diff.getEntryDifferences().get(0).getOriginalEntry(), "there is another value as originalEntry");
-        assertEquals(entryTwo, diff.getEntryDifferences().get(0).getNewEntry(), "there is another value as newEntry");
+        assertEquals(entryOne, diff.getEntryDifferences().getFirst().getOriginalEntry(), "there is another value as originalEntry");
+        assertEquals(entryTwo, diff.getEntryDifferences().getFirst().getNewEntry(), "there is another value as newEntry");
     }
 
     private BibDatabaseDiff compareEntries(BibEntry entryOne, BibEntry entryTwo) {
